update public folder

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Portfolio of Rémy Sirichantho, a web developer and graphic designer. Currently based in Belgium."/>
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,10 +21,23 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Rémy S. — Portfolio</title>
+    <link rel="canonical" href="http://lymih.be" />
+    <meta name="robots" content="index, follow" />
+
+    <meta property="og:title" content="Rémy S. — Portfolio" />
+    <meta property="og:site_name" content="Rémy S. — Portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://lymih.be" />
+    <meta property="og:description" content="Portfolio of Rémy Sirichantho, a web developer and graphic designer. Currently based in Belgium." />
+
+    <meta name="twitter:site" content="http://lymih.be" />
+    <meta name="twitter:creator" content="@RemySirichantho" />
+    <meta name="twitter:title" content="Rémy S. — Portfolio" />
+    <meta name="twitter:description" content="Portfolio of Rémy Sirichantho, a web developer and graphic designer. Currently based in Belgium." />
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to view this website</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
